Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103719

Crash in tst_qquicktext::implicitSize on macOS

    XMLWordPrintable

Details

    • macOS
    • 4fe9374589 (qt/qtbase/dev) 4fe9374589 (qt/tqtc-qtbase/dev)

    Description

      * thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x0)
        * frame #0: 0x00000001055a38d0 libQt6Gui_debug.6.dylib`QTextLayout::lineCount(this=0x0000000000000000) const at qtextlayout.cpp:802:12
          frame #1: 0x000000010054d136 libQt6Quick_debug.6.dylib`QQuickTextPrivate::updateSize(this=0x0000000130c86ee0) at qquicktext.cpp:496:41
          frame #2: 0x000000010054e51e libQt6Quick_debug.6.dylib`QQuickTextPrivate::updateLayout(this=0x0000000130c86ee0) at qquicktext.cpp:301:5
          frame #3: 0x00000001005572cf libQt6Quick_debug.6.dylib`QQuickText::geometryChange(this=0x0000000130c7e580, newGeometry=0x00007ffeefbfd348, oldGeometry=0x00007ffeefbfd328) at qquicktext.cpp:2474:12
          frame #4: 0x000000010049d65b libQt6Quick_debug.6.dylib`QQuickItem::setImplicitHeight(this=0x0000000130c7e580, h=20) at qquickitem.cpp:7312:5
          frame #5: 0x000000010054d0fa libQt6Quick_debug.6.dylib`QQuickTextPrivate::updateSize(this=0x0000000130c86ee0) at qquicktext.cpp:493:20
          frame #6: 0x000000010054e51e libQt6Quick_debug.6.dylib`QQuickTextPrivate::updateLayout(this=0x0000000130c86ee0) at qquicktext.cpp:301:5
          frame #7: 0x00000001005588e4 libQt6Quick_debug.6.dylib`QQuickText::componentComplete(this=0x0000000130c7e580) at qquicktext.cpp:2810:12
          frame #8: 0x0000000102b02e83 libQt6Qml_debug.6.dylib`QQmlObjectCreator::finalize(this=0x0000000130c87270, interrupt=0x00007ffeefbfda68) at qqmlobjectcreator.cpp:1455:25
          frame #9: 0x00000001029de12c libQt6Qml_debug.6.dylib`QQmlComponentPrivate::complete(enginePriv=0x0000000109371480, state=0x0000000109463528) at qqmlcomponent.cpp:1053:25
          frame #10: 0x00000001029dc8a5 libQt6Qml_debug.6.dylib`QQmlComponentPrivate::completeCreate(this=0x0000000109463480) at qqmlcomponent.cpp:1147:9
          frame #11: 0x00000001029df4e2 libQt6Qml_debug.6.dylib`QQmlComponent::completeCreate(this=0x00007ffeefbfdd08) at qqmlcomponent.cpp:1134:8
          frame #12: 0x00000001029de021 libQt6Qml_debug.6.dylib`QQmlComponent::create(this=0x00007ffeefbfdd08, context=0x0000000000000000) at qqmlcomponent.cpp:866:9
          frame #13: 0x0000000100031c84 tst_qquicktext`tst_qquicktext::implicitSize(this=0x00007ffeefbff500) at tst_qquicktext.cpp:2392:70
          frame #14: 0x000000010005f3e8 tst_qquicktext`tst_qquicktext::qt_static_metacall(_o=0x00007ffeefbff500, _c=InvokeMetaMethod, _id=37, _a=0x00007ffeefbfe170) at tst_qquicktext.moc:403:22
          frame #15: 0x000000010749821d libQt6Core_debug.6.dylib`QMetaMethod::invoke(this=0x00000001130643f0, object=0x00007ffeefbff500, connectionType=DirectConnection, returnValue=QGenericReturnArgument @ 0x00007ffeefbfe148, val0=(_data = 0x0000000000000000, _name = 0x0000000000000000), val1=(_data = 0x0000000000000000, _name = 0x0000000000000000), val2=(_data = 0x0000000000000000, _name = 0x0000000000000000), val3=(_data = 0x0000000000000000, _name = 0x0000000000000000), val4=(_data = 0x0000000000000000, _name = 0x0000000000000000), val5=(_data = 0x0000000000000000, _name = 0x0000000000000000), val6=(_data = 0x0000000000000000, _name = 0x0000000000000000), val7=(_data = 0x0000000000000000, _name = 0x0000000000000000), val8=(_data = 0x0000000000000000, _name = 0x0000000000000000), val9=(_data = 0x0000000000000000, _name = 0x0000000000000000)) const at qmetaobject.cpp:2357:13
          frame #16: 0x00000001071b5b7f libQt6Test_debug.6.dylib`QMetaMethod::invoke(this=0x00000001130643f0, object=0x00007ffeefbff500, connectionType=DirectConnection, val0=(_data = 0x0000000000000000, _name = 0x0000000000000000), val1=(_data = 0x0000000000000000, _name = 0x0000000000000000), val2=(_data = 0x0000000000000000, _name = 0x0000000000000000), val3=(_data = 0x0000000000000000, _name = 0x0000000000000000), val4=(_data = 0x0000000000000000, _name = 0x0000000000000000), val5=(_data = 0x0000000000000000, _name = 0x0000000000000000), val6=(_data = 0x0000000000000000, _name = 0x0000000000000000), val7=(_data = 0x0000000000000000, _name = 0x0000000000000000), val8=(_data = 0x0000000000000000, _name = 0x0000000000000000), val9=(_data = 0x0000000000000000, _name = 0x0000000000000000)) const at qmetaobject.h:90:16
          frame #17: 0x00000001071b4e7a libQt6Test_debug.6.dylib`QTest::TestMethods::invokeTestOnData(this=0x00007ffeefbff328, index=31) const at qtestcase.cpp:1023:45
          frame #18: 0x00000001071b63ec libQt6Test_debug.6.dylib`QTest::TestMethods::invokeTest(this=0x00007ffeefbff328, index=31, tag=(m_size = 0, m_data = 0x0000000000000000), watchDog=0x0000000000000000) const at qtestcase.cpp:1282:17
          frame #19: 0x00000001071b87e7 libQt6Test_debug.6.dylib`QTest::TestMethods::invokeTests(this=0x00007ffeefbff328, testObject=0x00007ffeefbff500) const at qtestcase.cpp:1631:33
          frame #20: 0x00000001071b9785 libQt6Test_debug.6.dylib`QTest::qRun() at qtestcase.cpp:2100:14
          frame #21: 0x00000001071b8ec8 libQt6Test_debug.6.dylib`QTest::qExec(testObject=0x00007ffeefbff500, argc=1, argv=0x00007ffeefbff6a8) at qtestcase.cpp:2002:15
          frame #22: 0x000000010005f0b4 tst_qquicktext`main(argc=1, argv=0x00007ffeefbff6a8) at tst_qquicktext.cpp:4783:1
          frame #23: 0x00007fff20357631 libdyld.dylib`start + 1
          frame #24: 0x00007fff20357631 libdyld.dylib`start + 1
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/4c4091865cc4c68c80c56b8a1a7c1559ba8789e9/MacOSMacOS_12arm64MacOSMacOS_12arm64Clangqtci-macos-12-arm64TestOnly/242d0f55487c79af6f2b1335839b958349f5e292/test_1652972200/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1652972090

      Tested changes (refs/builds/qtci/dev/1652967538):

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/412116/2 Update dependencies on 'dev' in qt/qtdeclarative

      Attachments

        For Gerrit Dashboard: QTBUG-103719
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes