Fix crash in tst_qquicktext::implicitSize

This reverts commit 1e938c348b936328fafbcaae4c0c7d91003143e5
and bb2f4d08d9d138e4f70d6d6db46e24e34500becc.

bb2f4d08d9d causes the crash, but 1e938c348b93 amends it, so
this reverts both. When the cause of the crash has been determined
and mitigated, the patches can be recreated.

Fixes: QTBUG-103719
Change-Id: Ifc36b3771a96f6c85387a5306a0402d4c508d006
Reviewed-by: David Faure <david.faure@kdab.com>